--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "date-fns": "^2.27.0"
+    "css-loader": "^6.5.1",
+    "date-fns": "^2.27.0",
+    "style-loader": "^3.3.1"
   }
 }
