added lodash and made it run off of comparing the two objects using that function. So I have fixed the project deleting issues

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "css-loader": "^6.5.1",
     "date-fns": "^2.27.0",
+    "lodash": "^4.17.21",
     "style-loader": "^3.3.1"
   }
 }
